# readczi_with_metadata

./: LICENSE  README.md  Well96_CH2_00.tif  mkdocs.yml  setup.cfg  setup.py  tox.ini
docs/: index.md
readczi_with_metadata/: _function.py
readczi_with_metadata/_tests/: test_function.py
