[metadata]
name = readczi_with_metadata
author = Sebastian Rhode
author_email = sebrhode@gmail.com
license = BSD-3
url = https://github.com/sebi06/readczi_with_metadata
description = Read CZI incl metadata
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/sebi06/readczi_with_metadata/issues
    Documentation = 'https://github.com/sebi06/readczi_with_metadata#README.md'
    Source Code = https://github.com/sebi06/readczi_with_metadata
    User Support = https://github.com/sebi06/readczi_with_metadata/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    readczi_with_metadata = readczi_with_metadata
